--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,18 @@ main{
     min-height: 80vh;
 }
 
+.pagination.active>.page-link{
+  color: black ;
+  background-color: white;
+  border-color: rgb(47, 15, 123);
+}
+
+.pagination.deactive>.page-link{
+  color: white ;
+  background-color: blue;
+  border-color: rgb(47, 15, 123);
+}
+
 .rating span{
     margin:0.01rem;
 }
@@ -17,7 +29,7 @@ main{
   top: 0;
 }
 
-.carousel-caption h4 {
+.carousel-caption h5 {
   color: #fff;
 }
 
@@ -33,8 +45,10 @@ main{
 .carousel a {
   margin: 0 auto;
 }
+
 @media (max-width: 900px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
   }
 }
+
